--- a/pom.xml
+++ b/pom.xml
@@ -18,15 +18,10 @@
   
 <distributionManagement>
   <repository>
-    <id>releases</id>
-    <!-- CHANGE HERE by your team nexus server -->
-    <url>http://43.204.19.102:8081//repository/maven-releases/</url>
-  </repository>
-  <snapshotRepository>
-    <id>snapshots</id>
-    <!-- CHANGE HERE by your team nexus server -->
-    <url>http://43.204.19.102:8081//repository/maven-snapshots/</url>
-   </snapshotRepository>
+      <id>internal.repo</id>
+         <name>Internal repo</name>
+         <url>file:///var/lib/jenkins/myArtifacts/</url>
+       </repository>
 </distributionManagement>
 
   <dependencies>
