--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.test</groupId>
   <artifactId>HelloWorldMaven</artifactId>
-  <version>2.0.1-SNAPSHOT</version>
+  <version>1.0.11-RELEASE</version>
   <packaging>jar</packaging>
 
   <name>HelloWorldMaven</name>
@@ -14,13 +14,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
-</properties>
+  </properties>
   
 <distributionManagement>
-  <repository>
-      <id>internal.repo</id>
+<repository>
+         <id>internal.repo</id>
          <name>Internal repo</name>
-         <url>file:///var/lib/jenkins/myArtifacts/</url>
+         <url>file:///var/lib/jenkins/myartifacts/</url>
        </repository>
 </distributionManagement>
 
