--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-    
+   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.6</maven.compiler.source>
-    <maven.compiler.target>1.6</maven.compiler.target>
-  </properties>
+    <maven.compiler.target>1.6</maven.compiler.target> 
+   </properties>
   
 <distributionManagement>
  <id>releases</id>
