--- a/pom.xml
+++ b/pom.xml
@@ -17,15 +17,9 @@
    </properties>
   
 <distributionManagement>
- <id>releases</id>
-    <!-- CHANGE HERE by your team nexus server -->
-    <url>http://65.1.1.46:8081//repository/maven-releases/</url>
-  </repository>
-  <snapshotRepository>
-    <id>snapshots</id>
-    <!-- CHANGE HERE by your team nexus server -->
-    <url>http://65.1.1.46:8081/repository/maven-snapshots/</url>
-   </snapshotRepository>
+        <id>internal.repo</id>
+         <name>Internal repo</name>
+         <url>file:///var/lib/jenkins/myartifacts/</url>
 </distributionManagement>
 
   <dependencies>
